edit profile alignment issue fix.

--- a/src/app/sign-up/edit-profile/edit-profile.component.scss
+++ b/src/app/sign-up/edit-profile/edit-profile.component.scss
@@ -25,11 +25,11 @@
   margin-top: -100px;
   .seperator{
     border-right: 0.5px solid #2d8289;
-    padding: 0 7px;
-    height: 34px;
-    width: 8px;
-    position: absolute;
-    bottom: 43px;
+    padding: 16px 7px;
+    height: 28px;
+    width: 2px;
+    margin-top: 10px;
+
   }
 }
   .edit-profile-section-bg{
